mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_missing_class_body.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Expected '{' after class header, but reached end of file
--> test_scripts/error_cases/parser_missing_class_body.mux:2:7
   |
 2 | class Foo
   |       ^^^
